Fix X share icon visibility

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ header {
 }
 
 .share-menu .share-twitter {
-  background-image: url(../images/icon-twitter.svg);
+  background-image: url(../images/icon-twitter.svg?v=20260614);
 }
 
 .share-menu .share-facebook {
